--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -126,9 +126,9 @@
         {% endif %}
         
         {% if perms.compras.add_ordencompra %}
-        <a href="{% url 'orden_compra_create' %}" class="quick-action-card">
-            <i class="fas fa-shopping-cart"></i>
-            <span>Nueva Orden de Compra</span>
+        <a href="{% url 'usuarios_list' %}" class="quick-action-card">
+            <i class="fas fa-users"></i>
+            <span>Gestión de Usuarios</span>
         </a>
         {% endif %}
         
