--- a/templates/base.html
+++ b/templates/base.html
@@ -10,17 +10,26 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}">
     
-    <!-- CSS Base -->
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <!-- Bootstrap Custom Theme (Colores empresariales) -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap-custom.css' %}">
+    
+    <!-- Font Awesome para iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- CSS Base (colores personalizados y overrides) -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     
     <!-- CSS Adicional -->
     {% block extra_css %}{% endblock %}
-    
-    <!-- Font Awesome para iconos -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     {% block body %}{% endblock %}
+    
+    <!-- Bootstrap 5 JS Bundle (incluye Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- JavaScript Base -->
     <script src="{% static 'js/base.js' %}"></script>
