--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -187,6 +187,7 @@
     display: flex;
     flex-direction: column;
     transition: margin-left var(--transition-normal);
+    overflow-x: hidden;
 }
 
 .main-content.expanded {
