--- a/templates/login.html
+++ b/templates/login.html
@@ -83,7 +83,7 @@
                         <input type="checkbox" id="remember" name="remember">
                         <label for="remember">Recordarme</label>
                     </div>
-                    <a href="#" class="forgot-password">¿Olvidaste tu contraseña?</a>
+                    <a href="{% url 'password_reset' %}" class="forgot-password">¿Olvidaste tu contraseña?</a>
                 </div>
                 
                 <!-- Submit Button -->
